--- a/aboutme.css
+++ b/aboutme.css
@@ -1,97 +1,37 @@
 @media only screen and (min-width: 450px){
-body{
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    transition:  all .5s;
-    overflow: hidden;
-    font-family: 'Open Sans Condensed', sans-serif;
-}
-img {
-    border: 5px solid #03a9f4;
-  }
-.btn {
-    border: 2px solid black;
-    padding: 14px 35px;
-    font-size: 16px;
-    cursor: pointer;
-}
-.rounded{
-    left: 0;
-    height: 100vh;
-    width:50%;
-    margin-top: 150px;
-    margin-left: 100px;
-}
-.rounded img{
-    border-radius: 25px;
-    width: 300px;
-    height: 300px;
-}
-.text{
-    height: 100vh;
-    width:50%;
-    float: left;
-} 
-.container
-{
-  display: flex;
-}
-.text{
-    position: relative;
-}
-.text h2{
-    position: absolute;
-    font-family: Arial, Helvetica, sans-serif;
-    transform: translate(-50%,-50%);
-    font-size: 4em;
-}
-.para{
-    right: 0;
-    height: 100vh;
-    width:100%;
-    margin-top: 150px;
-    margin-left: -200px;
-    font-size: 1.3em;
-}
-}
-@media only screen and (max-width:450px){
     body{
         background-position: center;
         background-size: cover;
-        height: 50vh;
+        height: 100vh;
         transition:  all .5s;
         overflow: hidden;
         font-family: 'Open Sans Condensed', sans-serif;
     }
     img {
-        border: 3px solid #03a9f4;
+        border: 5px solid #03a9f4;
       }
     .btn {
         border: 2px solid black;
-        padding: 7px 17px;
-        font-size: 5px;
+        padding: 14px 35px;
+        font-size: 16px;
         cursor: pointer;
     }
     .rounded{
         left: 0;
-        height: 50vh;
-        width:25%;
-        margin-top: 50px;
-        margin-left: 50px;
+        height: 100vh;
+        width:50%;
+        margin-top: 150px;
+        margin-left: 100px;
     }
     .rounded img{
-        margin-top: 20px;
-        margin-left: 100px;
         border-radius: 25px;
-        width: 150px;
-        height: 150px;
+        width: 300px;
+        height: 300px;
     }
     .text{
         height: 100vh;
         width:50%;
         float: left;
-        position: fixed;
     } 
     .container
     {
@@ -99,133 +39,196 @@ img {
     }
     .text{
         position: relative;
-        bottom: -100px;
     }
-    .text h2{
+    .container h2{
+        position: absolute;
         font-family: Arial, Helvetica, sans-serif;
         transform: translate(-50%,-50%);
-        font-size: 2.1em;
+        font-size: 4em;
     }
     .para{
         right: 0;
-        height: 500vh;
+        height: 100vh;
         width:100%;
-        margin-left: -50px;
-        bottom: 30px;
-        font-size: 1em;
-        text-align: justify;
+        top: 150px;
+        left: -200px;
+        font-size: 1.3em;
     }
-}
-body{
-    background: black;
-    background-position: center;
-    background-size: cover;
-    transition:  all .5s;
-    overflow: hidden;
-    font-family: 'Open Sans Condensed', sans-serif;
-}
-img {
-    border: 5px solid #03a9f4;
-  }
-.btn {
-    border: 2px solid black;
-    background-color: white;
-    color: black;
-    cursor: pointer;
-}
-.info {
-    border-color: #2196F3;
-    color: black;
-}
-.info:hover {
-    background: #2196F3;
-    color: black;
-}
-.container
-{
-  display: flex;
-}
-.text{
-    position: relative;
-}
-.text h2{
-    position: absolute;
-    font-family: Arial, Helvetica, sans-serif;
-    transform: translate(-50%,-50%);
-}
-.text h2:nth-child(1)
-{
-    color: transparent;
-    -webkit-text-stroke: 2px #03a9f4;
-}
-.text h2:nth-child(2)
-{
-    color: #03a9f4;
-    animation: animate 4s ease-in-out infinite;
-    -webkit-text-stroke: 2px #03a9f4;
-}
-@keyframes animate{
-    0%,100%{
-        clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
     }
-    50%{
-        clip-path: polygon( 0% 60%, 16% 65%,34% 66%, 51% 62%, 67% 50% ,84% 45%, 100% 46%,100% 100%, 0% 100%);
+    @media only screen and (max-width:450px){
+        body{
+            background-position: center;
+            background-size: cover;
+            height: 50vh;
+            transition:  all .5s;
+            overflow: hidden;
+            font-family: 'Open Sans Condensed', sans-serif;
+        }
+        img {
+            border: 3px solid #03a9f4;
+          }
+        .btn {
+            border: 2px solid black;
+            padding: 7px 17px;
+            font-size: 5px;
+            cursor: pointer;
+        }
+        .rounded{
+            left: 0;
+            height: 50vh;
+            width:25%;
+            margin-top: 50px;
+            margin-left: 50px;
+        }
+        .rounded img{
+            position: absolute;
+            top: 10%;
+            left: 30%;
+            right: 30%;
+            border-radius: 25px;
+            width: 150px;
+            height: 150px;
+        }
+        .text{
+            height: 100vh;
+            width:50%;
+            float: left;
+            position: fixed;
+        } 
+        .container
+        {
+          position: relative;
+          display: flex;
+          align-items: baseline;
+        }
+        .text{
+            position: relative;
+            bottom: -100px;
+        }
+        .container h2{
+            font-family: Arial, Helvetica, sans-serif;
+            transform: translate(-50%,-50%);
+            font-size: 1.85em;
+        }
+        .para{
+            right: 0;
+            height: 500vh;
+            width:100%;
+            left: -50px;
+            top: 22%;;
+            font-size: 0.8em;
+            text-align: justify;
+        }
     }
-}
-.para{
-    color: white;
-}
-.loading{
-    position: absolute;
-    left: 0;
-    top: 0;
-    right: 0;
-    bottom:0;
-    z-index: 1000;
-    background: #000;
-}
-.loader{
-    width: 200px;
-    height: 200px;
-    line-height: 200px;
-    text-align: center;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -100px 0 0 -100px;
-    font-size: 30px;
-    color:#fff;
-    perspective: 200px;
-}
-.animation1,
-.animation2{
-    position: absolute;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    border: 5px solid;
-    border-left-color: #10ac84;
-    border-top-color: #ff9f43;
-    border-right-color: #0984e3;
-    border-bottom-color: #d63031;
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    margin: -100px 0 0 -100px;
-    animation: animation1 3s ;
-    animation-iteration-count: infinite;
-
-}
-.animation2{
-    animation: animation2 3s ;
-    animation-iteration-count: infinite;
-
-}
-@keyframes animation1{
-    0%{transform: rotate3d(1,1,1,0deg);}
-    100%{transform: rotate3d(1,1,1,360deg);}
-}
-@keyframes animation2{
-    0%{transform: rotate3d(1,1,1,0deg);}
-    100%{transform: rotate3d(1,1,1,-360deg);}
-}
+    body{
+        background: black;
+        background-position: center;
+        background-size: cover;
+        transition:  all .5s;
+        overflow: hidden;
+        font-family: 'Open Sans Condensed', sans-serif;
+    }
+    img {
+        border: 5px solid #03a9f4;
+      }
+    .btn {
+        border: 2px solid black;
+        background-color: white;
+        color: black;
+        cursor: pointer;
+    }
+    .info {
+        border-color: #2196F3;
+        color: black;
+    }
+    .info:hover {
+        background: #2196F3;
+        color: black;
+    }
+    
+    .text{
+        position: relative;
+    }
+    .container h2{
+        position: absolute;
+        font-family: Arial, Helvetica, sans-serif;
+        transform: translate(-50%,-50%);
+        left: 50%;
+    }
+    .container h2:nth-child(3)
+    {
+        color: transparent;
+        -webkit-text-stroke: 2px #03a9f4;
+    }
+    .container h2:nth-child(2)
+    {
+        color: #03a9f4;
+        animation: animate 4s ease-in-out infinite;
+        -webkit-text-stroke: 2px #03a9f4;
+    }
+    @keyframes animate{
+        0%,100%{
+            clip-path: polygon(0% 45%, 15% 44%, 32% 50%, 54% 60%, 70% 61%, 84% 59%, 100% 52%, 100% 100%, 0% 100%);
+        }
+        50%{
+            clip-path: polygon( 0% 60%, 16% 65%,34% 66%, 51% 62%, 67% 50% ,84% 45%, 100% 46%,100% 100%, 0% 100%);
+        }
+    }
+    .para{
+        position: absolute;
+        color: white;
+    }
+    .loading{
+        position: absolute;
+        left: 0;
+        top: 0;
+        right: 0;
+        bottom:0;
+        z-index: 1000;
+        background: #000;
+    }
+    .loader{
+        width: 200px;
+        height: 200px;
+        line-height: 200px;
+        text-align: center;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin: -100px 0 0 -100px;
+        font-size: 30px;
+        color:#fff;
+        perspective: 200px;
+    }
+    .animation1,
+    .animation2{
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        border-radius: 50%;
+        border: 5px solid;
+        border-left-color: #10ac84;
+        border-top-color: #ff9f43;
+        border-right-color: #0984e3;
+        border-bottom-color: #d63031;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        margin: -100px 0 0 -100px;
+        animation: animation1 3s ;
+        animation-iteration-count: infinite;
+    
+    }
+    .animation2{
+        animation: animation2 3s ;
+        animation-iteration-count: infinite;
+    
+    }
+    @keyframes animation1{
+        0%{transform: rotate3d(1,1,1,0deg);}
+        100%{transform: rotate3d(1,1,1,360deg);}
+    }
+    @keyframes animation2{
+        0%{transform: rotate3d(1,1,1,0deg);}
+        100%{transform: rotate3d(1,1,1,-360deg);}
+    }
