--- a/certificates.css
+++ b/certificates.css
@@ -1,37 +1,140 @@
 *{
     margin:0px;
 }
+@media only screen and (min-width: 450px){
+    body,html{
+        width: 100%;
+        max-width: 1100px;
+        height: 100%;
+        overflow: hidden;
+    }
+    .container{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .box{
+        width: 100%;
+        height:150px;
+        float: left;
+        left:300px; 
+        position: relative;
+    }  
+    #header{
+        height: 120px;
+        margin-left: 700px;
+        margin-top: 40px;
+    }
+    #header h2{
+        position: absolute;
+        font-family: Arial, Helvetica, sans-serif;
+        transform: translate(-50%,-50%);
+        font-size: 4em;
+    }
+    .btn {
+        border: 2px solid black;
+        padding: 14px 35px;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    .box1{
+        width: 50%;
+    }
+    .box2{
+        width: 50%;
+    }
+    .box3{
+        width:50%;
+    }
+    .box4{
+        width: 50%;
+    }
+    .box5{
+        width:50%;
+    }
+    .box6{
+        width: 50%;
+    }
+    .logo {
+        width: 30px;
+        height: 30px;
+    }
+}
+@media only screen and (max-width: 450px){
+    body,html{
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    .container{
+        width: 100%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .box{
+        width: 200%;
+        float: left;
+        left:100px; 
+        position: relative;
+        height: 200px;
+    }  
+    #header{
+        height: 100px;
+        margin-left: 170px;
+        margin-top: 60px;
+    }
+    #header h2{
+        position: relative;
+        font-family: Arial, Helvetica, sans-serif;
+        transform: translate(-50%,-50%);
+        font-size: 3em;
+    }
+    .btn {
+        border: 2px solid black;
+        padding: 10px 17px;
+        font-size: 8px;
+        cursor: pointer;
+        margin-left: -50px;
+    }
+    .box1{
+        width: 50%;
+    }
+    .box2{
+        width: 50%;
+    }
+    .box3{
+        width:50%;
+    }
+    .box4{
+        width: 50%;
+    }
+    .box5{
+        width:50%;
+    }
+    .box6{
+        width: 50%;
+    }
+    .logo {
+        width: 15px;
+        height: 15px;
+    }
+
+}
+
 body,html{
-    width: 100%;
-    height: 100%;
     background-color: black;
     overflow: hidden;
 }
-
-
-.container{
-    width: 100%;
-    max-width: 1100px;
-    margin-left: auto;
-    margin-right: auto;
-  
-}
-.logo {
-    width: 30px;
-    height: 30px;
-}
+.box{ 
+    position: relative;
+}  
 #header{
-    height: 120px;
     color: white;
-    margin-left: 500px;
-    margin-top: 40px;
 }
-
 #header h2{
     position: absolute;
     font-family: Arial, Helvetica, sans-serif;
     transform: translate(-50%,-50%);
-    font-size: 4em;
 }
 #header h2:nth-child(1)
 {
@@ -52,21 +155,11 @@ body,html{
         clip-path: polygon( 0% 60%, 16% 65%,34% 66%, 51% 62%, 67% 50% ,84% 45%, 100% 46%,100% 100%, 0% 100%);
     }
 }
-.box{
-    width: 100%;
-    height:150px;
-    float: left;
-    left:150px; 
-    position: relative;
-}
 .btn {
     border: 2px solid black;
     background-color: white;
     color: black;
-    padding: 14px 35px;
-    font-size: 16px;
     cursor: pointer;
-   
 }
 .info {
     border-color: #2196F3;
@@ -77,197 +170,5 @@ body,html{
     color: black;
 }
 
-
-.clearfix{
-    clear: both;
-}
-@media screen and (max-width: 520px){
-    .box1{
-        width: 50%;
-    }
-    .box2{
-        width: 50%;
-        position: relative;
-    }
-    .box3{
-        width:50%;
-    }
-    .box4{
-        width: 50%;
-    }
-    .box5{
-        width:50%;
-    }
-    .box6{
-        width: 50%;
-    }
-    #header{
-        height: 120px;
-        color: white;
-        margin-left: 175px;
-        margin-top: 50px;
-        font-size: 13px;
-    }
-    #leafSize {
-        width: 25px;
-        height: 25px;
-    }
-    
-}
-@media screen and (min-width: 320px){
-    .box1{
-        width: 50%;
-       
-    }
-    .box2{
-        width: 50%;
-        margin-right: -40px;
-    }
-    .box3{
-        width:50%;
-    }
-    .box4{
-        width: 50%;
-    }
-    .box5{
-        width:50%;
-    }
-    .box6{
-        width: 50%;
-    }
-    #leafSize {
-        width: 75px;
-        height: 75px;
-    }
-    
-    
-}
-.leaf div {
-    position: absolute;
-    display: block;
-}
-
-.leafs div {
-    position: absolute;
-    display: block;
-}
-
-.leafTwo div {
-    position: absolute;
-    display: block;
-}
-
-.leaf div:nth-child(1) {
-    left: 20%;
-    animation: fall 4s linear infinite;
-    animation-delay: -2s;
-}
-
-.leaf div:nth-child(2) {
-    left: 70%;
-    animation: fall 5s linear infinite;
-    animation-delay: -4s;
-}
-
-.leaf div:nth-child(3) {
-    left: 10%;
-    animation: fall 3s linear infinite;
-    animation-delay: -2s;
-}
-
-.leaf div:nth-child(4) {
-    left: 50%;
-    animation: fall 4s linear infinite;
-    animation-delay: -4s;
-}
-
-.leaf div:nth-child(5) {
-    left: 85%;
-    animation: fall 7s linear infinite;
-    animation-delay: -2s;
-}
-
-.leaf div:nth-child(6) {
-    left: 15%;
-    animation: fall 10s linear infinite;
-    animation-delay: -4s;
-}
-
-.leaf div:nth-child(7) {
-    left: 90%;
-    animation: fall 2s linear infinite;
-    animation-delay: -4s;
-}
-
-.leafTwo div:nth-child(1) {
-    left: 5%;
-    animation: fall 4s linear infinite;
-    animation-delay: -4s;
-}
-
-.leafTwo div:nth-child(2) {
-    left: 30%;
-    animation: fall 15s linear infinite;
-    animation-delay: -4s;
-}
-
-.leafTwo div:nth-child(3) {
-    left: 80%;
-    animation: fall 20s linear infinite;
-    animation-delay: -7s;
-}
-
-.leafTwo div:nth-child(4) {
-    left: 20%;
-    animation: fall 18s linear infinite;
-    animation-delay: -5s;
-}
-
-.leafTwo div:nth-child(5) {
-    left: 35%;
-    animation: fall 14s linear infinite;
-    animation-delay: -1s;
-}
-
-.leafTwo div:nth-child(6) {
-    left: 75%;
-    animation: fall 16s linear infinite;
-    animation-delay: -1s;
-}
-
-.leafTwo div:nth-child(7) {
-    left: 30%;
-    animation: fall 15s linear infinite;
-    animation-delay: -2s;
-}
-
-@keyframes fall {
-    0% {
-        opacity: 1;
-        top: -10%;
-        transform: translateX (20px) rotate(0deg);
-    }
-    20% {
-        opacity: 0.8;
-        transform: translateX (-20px) rotate(45deg);
-    }
-    40% {
-        transform: translateX (-20px) rotate(90deg);
-    }
-    60% {
-        transform: translateX (-20px) rotate(135deg);
-    }
-    80% {
-        transform: translateX (-20px) rotate(180deg);
-    }
-    100% {
-        top: 110%;
-        transform: translateX (-20px) rotate(225deg);
-    }
-}
-
-.leafs {
-    transform: rotateX(180deg);
-}
 
 
