--- a/aboutme.css
+++ b/aboutme.css
@@ -178,57 +178,74 @@
         position: absolute;
         color: white;
     }
-    .loading{
-        position: absolute;
-        left: 0;
-        top: 0;
-        right: 0;
-        bottom:0;
-        z-index: 1000;
-        background: #000;
-    }
-    .loader{
-        width: 200px;
-        height: 200px;
-        line-height: 200px;
-        text-align: center;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        margin: -100px 0 0 -100px;
-        font-size: 30px;
-        color:#fff;
-        perspective: 200px;
-    }
-    .animation1,
-    .animation2{
-        position: absolute;
-        width: 200px;
-        height: 200px;
-        border-radius: 50%;
-        border: 5px solid;
-        border-left-color: #10ac84;
-        border-top-color: #ff9f43;
-        border-right-color: #0984e3;
-        border-bottom-color: #d63031;
-        position: absolute;
-        left: 50%;
-        top: 50%;
-        margin: -100px 0 0 -100px;
-        animation: animation1 3s ;
-        animation-iteration-count: infinite;
-    
-    }
-    .animation2{
-        animation: animation2 3s ;
-        animation-iteration-count: infinite;
-    
-    }
-    @keyframes animation1{
-        0%{transform: rotate3d(1,1,1,0deg);}
-        100%{transform: rotate3d(1,1,1,360deg);}
-    }
-    @keyframes animation2{
-        0%{transform: rotate3d(1,1,1,0deg);}
-        100%{transform: rotate3d(1,1,1,-360deg);}
-    }
+    a{
+  position:relative;
+  display:inline-block;
+  color:#2196f3;
+  text-transform:uppercase;
+  letter-spacing: 4px;
+  text-decoration:none;
+  font-size:20px;
+  overflow:hidden;
+  transition:0.2s;
+  justify-content:left;
+  align-item:left;
+}
+a:hover{
+  color:#255784;
+  background:#2196f3;
+  box-shadow:0 0 10px #2196f3, 0 0 40px #2196f3, 0 0 80px #2196f3;
+  transition-delay:1s;
+}
+a span{
+  position:absolute;
+  display:block;
+  
+}
+a span:nth-child(1){
+  top:0;
+  left: -100%;
+  width:100%;
+  height:2px;
+  background: linear-gradient(90deg, transparent, #2196f3);
+}
+a:hover span:nth-child(1){
+  left:100%;
+    transition:1s;
+}
+a span:nth-child(3){
+  bottom:0;
+  right: -100%;
+  width:100%;
+  height:2px;
+  background: linear-gradient(270deg, transparent, #2196f3);
+}
+a:hover span:nth-child(3){
+  right:100%;
+    transition:1s;
+  transition-delay: 0.5s;
+}
+a span:nth-child(2){
+  top:-100%;
+  right: 0;
+  width:2px;
+  height:100%;
+  background: linear-gradient(180deg, transparent, #2196f3);
+}
+a:hover span:nth-child(2){
+  top:100%;
+    transition:1s;
+  transition-delay: 0.25s;
+}
+a span:nth-child(4){
+  bottom:-100%;
+  left:100;
+  width:2px;
+  height:100%;
+  background: linear-gradient(360deg, transparent, #2196f3);
+}
+a:hover span:nth-child(4){
+  
+    transition:1s;
+  transition-delay: 0.75s;
+}
